# cli

./: .env.dist  .gitignore  Cargo.toml  LICENSE  README.md
examples/: report.txt  todo.txt
src/: color.rs  commands.rs  config.rs  errors.rs  lib.rs  list.rs  main.rs  opts.rs
tests/: commands.rs
