[package]
name = "todo-txt-cli"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
description = "Cli for the todo.txt format"
license = "MIT"
keywords = ["todotxt"]
repository = "https://github.com/sanpii/todo-txt"
edition = "2021"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
exec = "0.3"
regex = "1.5"
thiserror = "2.0"
todo-txt = "3.1"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["std"]

[dependencies.envir]
version = "1.0"
default-features = false
features = ["extrapolation", "serde"]

[dependencies.clap]
version = "4.0"
features = ["derive"]

[dependencies.owo-colors]
version = "4.0"
features = ["supports-colors"]

[dev-dependencies]
assert_cmd = "2.0"
mktemp = "0.5"

[features]
default = ["extended"]
extended = ["todo-txt/extended"]
